prevent detail from hiding behind header

--- a/risky_sophie/main.css
+++ b/risky_sophie/main.css
@@ -190,7 +190,7 @@ header {
 .positioned {
     position: absolute;
     left: 0;
-    top: 0;
+    top: calc(2 * var(--header-padding) + 4ch);
 }
 
 .dashboard {
